@@ -4,6 +4,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.openapi.generator' version '4.1.1'
+    id 'edu.sc.seis.launch4j' version '2.4.8'
 }
 
 group = 'com.reckue'
@@ -76,6 +77,7 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.0' // for binding xml
 
     implementation "org.openapitools:jackson-databind-nullable:0.2.1"
+    implementation "com.thoughtworks.xstream:xstream:1.4.13"
 }
 
 // ----------[ checkstyle ]----------
@@ -87,13 +89,17 @@ checkstyle {
 // ----------[ openapi code generation ]----------
 openApiGenerate {
     generatorName = "spring"
-    inputSpec = "$rootDir/src/main/resources/openapi/post.yml"
+    inputSpec = "${rootDir}/src/main/resources/openapi/post.yml"
     outputDir = "${rootProject.buildDir}/generated"
-    typeMappings = [OffsetDateTime: "java.time.Instant"]
+    templateDir = "${rootDir}/src/main/resources/openapi/templates"
+    typeMappings = [
+            OffsetDateTime: "java.time.Instant",
+    ]
     configOptions = [
             interfaceOnly : true,
             apiPackage    : "com.reckue.post.generated.controllers",
-            modelPackage  : "com.reckue.post.generated.models"
+            modelPackage  : "com.reckue.post.generated.models",
+            useLombok: true
     ]
     enablePostProcessFile = false
 }
@@ -112,5 +118,5 @@ test {
 
 // ----------[ bootRun ]----------
 bootRun {
-    args = ["--spring.profiles.active=" + profile]
+    args = ["--spring.profiles.active=" + profile + " --illegal-access=warn"]
 }
